--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "psy/psysh": "@stable",
         "cakephp/debug_kit": "~3.2",
         "cakephp/bake": "~1.1",
-        "xety/cake3-upload": "1.*"
+        "xety/cake3-upload": "1.*",
+        "phpunit/phpunit": "^5.5"
     },
     "suggest": {
         "phpunit/phpunit": "Allows automated tests to be run without system-wide install.",
